# mujoco-terminal

./: bench.py  demo.py  mujoco_terminal_render.py  pyproject.toml  test_alignment.py  test_click.py
benchmarks/: README.md  bench.py  benchmark.py
mujoco_terminal/: __init__.py  _render.py
