[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mujoco-terminal"
version = "0.1.0"
description = "MuJoCo renderer for terminal output via Kitty image protocol or ASCII"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "mujoco>=3.0",
    "pillow",
    "numpy",
]

[tool.hatch.build.targets.wheel]
only-include = ["mujoco_terminal_render.py", "demo.py"]

[project.scripts]
mujoco-terminal = "demo:main"
